Added Copper Coin Added Misc Item Tab Added Copper Coin to Misc Item Tab

--- a/src/main/resources/assets/drcookies_rpg_mod/lang/en_us.json
+++ b/src/main/resources/assets/drcookies_rpg_mod/lang/en_us.json
@@ -2,8 +2,10 @@
 
   "item.drcookies_rpg_mod.swamp_iron_raw": "Raw Swamp Iron",
   "item.drcookies_rpg_mod.swamp_iron_ingot": "Swamp Iron Ingot",
+  "item.drcookies_rpg_mod.coin_copper": "Copper Coin",
 
-  "itemgroup.rpg_ingredients": "DrCookies RPG Ingredients"
+  "itemgroup.rpg_ingredients": "DrCookies RPG Ingredients",
+  "itemgroup.rpg_misc": "DrCookies RPG Misc"
 
 
 }
