Added Blocks creative tab

--- a/src/main/resources/assets/drcookies_rpg_mod/lang/en_us.json
+++ b/src/main/resources/assets/drcookies_rpg_mod/lang/en_us.json
@@ -8,6 +8,7 @@
   "block.drcookies_rpg_mod.swamp_iron_ore": "Swamp Iron Ore",
 
   "itemgroup.rpg_ingredients": "DrCookies RPG Ingredients",
+  "itemgroup.rpg_blocks": "DrCookies RPG Blocks",
   "itemgroup.rpg_misc": "DrCookies RPG Misc"
 
 
