Tutorial 5 complete, Added Block drops, Added Ore Loot Tables, Added Swamp Iron Ore Variants for testing purpose,

--- a/src/main/resources/assets/drcookies_rpg_mod/lang/en_us.json
+++ b/src/main/resources/assets/drcookies_rpg_mod/lang/en_us.json
@@ -6,6 +6,10 @@
 
   "block.drcookies_rpg_mod.swamp_iron_raw_block": "Block of Raw Swamp Iron",
   "block.drcookies_rpg_mod.swamp_iron_ore": "Swamp Iron Ore",
+  "block.drcookies_rpg_mod.deepslate_swamp_iron_ore": "Deepslate Swamp Iron Ore",
+  "block.drcookies_rpg_mod.nether_swamp_iron_ore": "Nether Swamp Iron Ore",
+  "block.drcookies_rpg_mod.end_stone_swamp_iron_ore": "End Stone Swamp Iron Ore",
+
 
   "itemgroup.rpg_misc": "DRPG Misc",
   "itemgroup.rpg_biome_additions": "DRPG Biome Additions"
