Added Swamp Iron Block and recipes

--- a/src/main/resources/assets/drcookies_rpg_mod/lang/en_us.json
+++ b/src/main/resources/assets/drcookies_rpg_mod/lang/en_us.json
@@ -5,6 +5,7 @@
   "item.drcookies_rpg_mod.coin_copper": "Copper Coin",
 
   "block.drcookies_rpg_mod.swamp_iron_raw_block": "Block of Raw Swamp Iron",
+  "block.drcookies_rpg_mod.swamp_iron_block": "Block of Swamp Iron",
   "block.drcookies_rpg_mod.swamp_iron_ore": "Swamp Iron Ore",
   "block.drcookies_rpg_mod.deepslate_swamp_iron_ore": "Deepslate Swamp Iron Ore",
   "block.drcookies_rpg_mod.nether_swamp_iron_ore": "Nether Swamp Iron Ore",
