Added "In Development" Creative Tab

--- a/src/main/resources/assets/drcookies_rpg_mod/lang/en_us.json
+++ b/src/main/resources/assets/drcookies_rpg_mod/lang/en_us.json
@@ -13,6 +13,7 @@
 
 
   "itemgroup.rpg_misc": "DRPG Misc",
+  "itemgroup.rpg_dev": "DRPG In Development",
   "itemgroup.rpg_biome_additions": "DRPG Biome Additions"
 
 }
