Tutorial 6 complete Added Metal Detector as an example for a complex item with its own class

--- a/src/main/resources/assets/drcookies_rpg_mod/lang/en_us.json
+++ b/src/main/resources/assets/drcookies_rpg_mod/lang/en_us.json
@@ -3,6 +3,8 @@
   "item.drcookies_rpg_mod.swamp_iron_raw": "Raw Swamp Iron",
   "item.drcookies_rpg_mod.swamp_iron_ingot": "Swamp Iron Ingot",
   "item.drcookies_rpg_mod.coin_copper": "Copper Coin",
+  "item.drcookies_rpg_mod.metal_detector": "Metal Detector",
+
 
   "block.drcookies_rpg_mod.swamp_iron_raw_block": "Block of Raw Swamp Iron",
   "block.drcookies_rpg_mod.swamp_iron_block": "Block of Swamp Iron",
