Tutorial 9 completed Added Combustily Bud (Fuel)

--- a/src/main/resources/assets/drcookies_rpg_mod/lang/en_us.json
+++ b/src/main/resources/assets/drcookies_rpg_mod/lang/en_us.json
@@ -1,5 +1,7 @@
 {
 
+  "item.drcookies_rpg_mod.combustily_bud": "Combustily Bud",
+
   "item.drcookies_rpg_mod.swamp_iron_raw": "Raw Swamp Iron",
   "item.drcookies_rpg_mod.swamp_iron_ingot": "Swamp Iron Ingot",
   "item.drcookies_rpg_mod.slime_berry": "Slime Berries",
