Tutorial 10 completed Added some Tooltips to the test items

--- a/src/main/resources/assets/drcookies_rpg_mod/lang/en_us.json
+++ b/src/main/resources/assets/drcookies_rpg_mod/lang/en_us.json
@@ -20,7 +20,9 @@
 
   "itemgroup.rpg_misc": "DRPG Misc",
   "itemgroup.rpg_dev": "DRPG In Development",
-  "itemgroup.rpg_biome_additions": "DRPG Biome Additions"
+  "itemgroup.rpg_biome_additions": "DRPG Biome Additions",
+
+  "tooltip.drcookies_rpg_mod.metal_detector.tooltip": "Finds Diamond and Iron Ore"
 
 }
 
