Added rotting mud

--- a/src/main/resources/assets/drcookies_rpg_mod/lang/en_us.json
+++ b/src/main/resources/assets/drcookies_rpg_mod/lang/en_us.json
@@ -5,6 +5,7 @@
   "item.drcookies_rpg_mod.swamp_iron_raw": "Raw Swamp Iron",
   "item.drcookies_rpg_mod.swamp_iron_ingot": "Swamp Iron Ingot",
   "item.drcookies_rpg_mod.swamp_iron_nugget": "Swamp Iron Nugget",
+  "item.drcookies_rpg_mod.rotting_mud": "Rotting Mud",
   "item.drcookies_rpg_mod.slime_berry": "Slime Berries",
   "item.drcookies_rpg_mod.coin_copper": "Copper Coin",
   "item.drcookies_rpg_mod.metal_detector": "Metal Detector",
