--- a/src/main/resources/assets/drcookies_rpg_mod/lang/en_us.json
+++ b/src/main/resources/assets/drcookies_rpg_mod/lang/en_us.json
@@ -17,6 +17,7 @@
   "block.drcookies_rpg_mod.deepslate_swamp_iron_ore": "Deepslate Swamp Iron Ore",
   "block.drcookies_rpg_mod.nether_swamp_iron_ore": "Nether Swamp Iron Ore",
   "block.drcookies_rpg_mod.end_stone_swamp_iron_ore": "End Stone Swamp Iron Ore",
+  "block.drcookies_rpg_mod.rotting_mud_bricks": "Rotting Mud Bricks",
   "block.drcookies_rpg_mod.sound_block": "Sound Block",
 
 
